plugins {
        id 'java'
        id 'org.springframework.boot' version '3.5.6'
        id 'io.spring.dependency-management' version '1.1.7'
        id 'jacoco'
}

group = 'com.axon'
version = '0.0.1-SNAPSHOT'
description = 'axon core services'

java {
        toolchain {
                languageVersion = JavaLanguageVersion.of(21)
        }
}

jacoco {
    toolVersion = "0.8.11"
}

jacocoTestReport {
    dependsOn test
    reports {
        html.required = true
        xml.required = true
    }
}
configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-batch'
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
	implementation 'org.springframework.kafka:spring-kafka'
    implementation 'org.springframework.boot:spring-boot-starter-data-redis'
    implementation 'org.redisson:redisson-spring-boot-starter:3.27.0'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
    implementation 'nz.net.ultraq.thymeleaf:thymeleaf-layout-dialect'
    implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity6'

    // Monitoring
    implementation 'org.springframework.boot:spring-boot-starter-actuator'
    implementation 'io.micrometer:micrometer-registry-prometheus'


	// Elasticsearch Java API Client
	implementation 'co.elastic.clients:elasticsearch-java:8.11.0'
	implementation 'org.elasticsearch.client:elasticsearch-rest-client:8.11.0'
	implementation 'com.fasterxml.jackson.core:jackson-databind'

	// JWT
	implementation 'io.jsonwebtoken:jjwt-api:0.13.0'
	implementation 'io.jsonwebtoken:jjwt-impl:0.13.0'
	implementation 'io.jsonwebtoken:jjwt-jackson:0.13.0'

    // axon-module
    implementation 'com.axon:common-messaging:0.0.1-SNAPSHOT'

    // Java Fake Data Generator
    implementation 'net.datafaker:datafaker:2.1.0'

	compileOnly 'org.projectlombok:lombok'
	developmentOnly 'org.springframework.boot:spring-boot-devtools'
	runtimeOnly 'com.mysql:mysql-connector-j'
	annotationProcessor 'org.projectlombok:lombok'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'com.h2database:h2'
	testImplementation 'org.springframework.batch:spring-batch-test'
	testImplementation 'org.springframework.kafka:spring-kafka-test'
    testImplementation "org.testcontainers:mysql"
    testImplementation "org.testcontainers:kafka"
    testImplementation "org.testcontainers:junit-jupiter"
    testImplementation "org.testcontainers:testcontainers"
    testImplementation "org.springframework.boot:spring-boot-testcontainers"
    testImplementation "com.redis:testcontainers-redis:2.2.3"
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

dependencyManagement {
    imports {
        mavenBom "org.testcontainers:testcontainers-bom:1.20.0"
    }
}

tasks.named('test') {
	useJUnitPlatform()

    // Intelligent Colima Auto-Detection
    // Only apply the socket override if we detect a Colima-based Docker environment.
    def dockerHostEnv = System.getenv("DOCKER_HOST") ?: ""
    if (dockerHostEnv.contains(".colima")) {
        environment "TESTCONTAINERS_DOCKER_SOCKET_OVERRIDE", "/var/run/docker.sock"
    }
}
